rust/ommx/src/instance/snapshots/ommx__instance__stats__tests__stats_snapshot_empty.snap
---
source: rust/ommx/src/instance/stats.rs
expression: stats
---
decision_variables:
  total: 0
  by_kind:
    binary: 0
    integer: 0
    continuous: 0
    semi_integer: 0
    semi_continuous: 0
    finite_domain: 0
  by_usage:
    used_in_objective: 0
    used_in_constraints: 0
    used: 0
    fixed: 0
    dependent: 0
    irrelevant: 0
constraints:
  total: 0
  active: 0
  removed: 0
