rust/ommx/src/instance/snapshots/ommx__instance__stats__tests__stats_snapshot_with_constraints.snap
---
source: rust/ommx/src/instance/stats.rs
expression: stats
---
decision_variables:
  total: 3
  by_kind:
    binary: 2
    integer: 1
    continuous: 0
    semi_integer: 0
    semi_continuous: 0
    finite_domain: 0
  by_usage:
    used_in_objective: 1
    used_in_constraints: 3
    used: 3
    fixed: 0
    dependent: 0
    irrelevant: 0
constraints:
  total: 3
  active: 2
  removed: 1
