rust/ommx/src/instance/snapshots/ommx__instance__stats__tests__stats_snapshot_with_variables.snap
---
source: rust/ommx/src/instance/stats.rs
expression: stats
---
decision_variables:
  total: 6
  by_kind:
    binary: 2
    integer: 1
    continuous: 1
    semi_integer: 1
    semi_continuous: 0
    finite_domain: 1
  by_usage:
    used_in_objective: 3
    used_in_constraints: 0
    used: 3
    fixed: 0
    dependent: 0
    irrelevant: 3
constraints:
  total: 0
  active: 0
  removed: 0
